--- a/config.json
+++ b/config.json
@@ -10,6 +10,11 @@
         "name": "user",
         "kind": 1,
         "pass": "5f4dcc3b5aa765d61d8327deb882cf99"
+    },
+    "test":{
+        "name": "test",
+        "kind": 3,
+        "pass": "098f6bcd4621d373cade4e832627b4f6"
     }
-}
+    }
 }
